--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "dompurify": "^3.0.2",
     "feather-icons": "^4.29.0",
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
