--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "dompurify": "^3.0.2",
     "feather-icons": "^4.29.0",
+    "html-react-parser": "^3.0.16",
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
